qlc/cpp/ql.h

  void DLLEXPORT qlFreeAmericanExercise(QlAmericanExercise *o);
  QlExercise* DLLEXPORT qlAmericanExerciseAsExercise(QlAmericanExercise *o);
  void DLLEXPORT qlFreeBermudanExercise(QlBermudanExercise *o);
  QlExercise* DLLEXPORT qlBermudanExerciseAsExercise(QlBermudanExercise *o);
  void DLLEXPORT qlFreeEuropeanExercise(QlEuropeanExercise *o);
  QlExercise* DLLEXPORT qlEuropeanExerciseAsExercise(QlEuropeanExercise *o);
  void DLLEXPORT qlFreeExercise(QlExercise *o);
  QlAmericanExercise* DLLEXPORT qlAmericanExercise(int earliestDate, int latestDate, int payoffAtExpiry, char **e);
  QlBermudanExercise* DLLEXPORT qlBermudanExercise(unsigned datesLen, int *dates, int payoffAtExpiry, char **e);
  QlExercise* DLLEXPORT qlEarlyExercise(int type, int payoffAtExpiry, char **e);
  QlExercise* DLLEXPORT qlExercise(int type, char **e);
  QlEuropeanExercise* DLLEXPORT qlEuropeanExercise(int date, char **e);
  void DLLEXPORT qlFreeSwingExercise(QlSwingExercise *o);
  QlSwingExercise* DLLEXPORT qlSwingExercise(unsigned datesLen, int* dates, unsigned* seconds, char **e);
  QlSwingExercise* DLLEXPORT qlSwingExercise1(int from, int to, unsigned stepSizeSecs, char **e);